# Mailing-Service

./: Readme.md  blog_data.json  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: blog_detail.html  blog_list.html
config/: settings.py  urls.py
newsletter/: admin.py  forms.py  models.py  services.py  urls.py  views.py
newsletter/management/commands/: runapscheduler.py
newsletter/migrations/: 0001_initial.py  0002_initial.py
newsletter/templates/newsletter/: base.html  client_confirm_delete.html  client_detail.html  client_list.html  contacts.html  index.html  mail_confirm_delete.html  mail_detail.html  mail_form.html  mail_list.html  message_confirm_delete.html  message_detail.html  message_list.html
newsletter/templates/newsletter/includes/: blog.html  inc_menu.html  menu.html
static/css/: bootstrap.rtl.min.css.map
users/: models.py  urls.py  utils.py  views.py
users/migrations/: 0001_initial.py
users/templates/users/: login.html  register.html  user_form.html  user_list.html
