[tool.poetry]
name = "newsletter"
version = "0.1.0"
description = ""
authors = ["Andrew_Polik <polik.24@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
apscheduler = "^3.10.4"
asgiref = "^3.8.1"
async-timeout = "^4.0.3"
django = "4.2"
django-apscheduler = "^0.6.2"
psycopg2 = "^2.9.9"
python-dotenv = "^1.0.1"
pytz = "^2024.1"
redis = "^5.0.3"
sqlparse = "^0.4.4"
tzdata = "^2024.1"
tzlocal = "^5.2"
pillow = "^10.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
